Fix plus button alignment

--- a/styles.css
+++ b/styles.css
@@ -86,10 +86,12 @@ h1 {
   border-radius: 0 3px 3px 0;
   color: #FFF;
   display: flex;
-  font-size: 50px;
+  font-size: 73px;
   font-weight: 300;
   height: 60px;
   width: 15%;
+  justify-content: center;
+  line-height: 0px;
 }
 
 .top-left {
